--- a/AP2_Q01.html
+++ b/AP2_Q01.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AP2_Q01</title>
+    <link rel="stylesheet" href="CSS/AP2_Q01.css">
 </head>
 <body>
     <header>
@@ -13,18 +14,18 @@
         <div>
             numero ( entre 1 e 100)
             <input type="number" id="numero">
-            <input type="number" id="numero">
-            <input type="number" id="numero">
             <input type="button" value="adicionar" onclick="adicionar()">
-            <br><select id="resultado" size="6"></select>
+            <br><br><select id="flista" size="6"></select>
             <br><input type="button" value="Resultado" onclick="Resultado()">
+
         </div>
         <div id="res">
 
         </div>
     </section>
-    <script>
-        window.alert("Minha Primeira Manssagem") //Alerta de pagina
-    </script>
+    <footer>
+        <p>&copy; AP_2</p>
+    </footer>
+    <script src="funcao.js"></script>
 </body>
 </html>
