--- a/AP2_Q01.html
+++ b/AP2_Q01.html
@@ -13,7 +13,7 @@
     <section>
         <div>
             numero ( entre 1 e 100)
-            <input type="number" id="numero">
+            <input type="number" id="fnumero">
             <input type="button" value="adicionar" onclick="adicionar()">
             <br><br><select id="flista" size="6"></select>
             <br><input type="button" value="Resultado" onclick="Resultado()">
