--- a/AP2_Q01.html
+++ b/AP2_Q01.html
@@ -7,25 +7,8 @@
     <link rel="stylesheet" href="CSS/AP2_Q01.css">
 </head>
 <body>
-    <header>
-    <h1>Média aritmética</h1>
-    </header>
-    <section>
-        <div>
-            numero ( entre 1 e 100)
-            <input type="number" id="fnumero">
-            <input type="button" value="adicionar" onclick="adicionar()">
-            <br><br><select id="flista" size="6"></select>
-            <br><input type="button" value="Resultado" onclick="Resultado()">
+    <h1>Media aritmética</h1>
+    <script src="funcao2.js"></script>
 
-        </div>
-        <div id="res">
-
-        </div>
-    </section>
-    <footer>
-        <p>&copy; AP_2</p>
-    </footer>
-    <script src="funcao.js"></script>
 </body>
 </html>
