--- a/AP2_Q01.html
+++ b/AP2_Q01.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Media aritmética</h1>
-    <script src="funcao2.js"></script>
+    <script src="Script1.js"></script>
 
 </body>
 </html>
