--- a/AP2_Q03.html
+++ b/AP2_Q03.html
@@ -14,11 +14,11 @@
         <div>
             <div>
                 <input type="text" value="" id="txtvalue" name="txtvalue" />
-                <button type="button" onclick="calcula(document.getElementById('txtvalue').value)">Calcular</button>
+                <button type="button" onclick="calcula(document.getElementById('txtvalue').value)">nota</button>
                 </div>
-                <p id="valor"></p>
-                <p id="porcetagem"></p>
-                <p id="calculo"></p>
+                <p id="Nome do aluno"></p>
+                <p id="nota"></p>
+                <p id="Aprovado"></p>
                 <p id="reposta"></p>
         </div>
         <div id="res">
