--- a/AP2_Q03.html
+++ b/AP2_Q03.html
@@ -3,30 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP2_Q01</title>
+    <title>AP2_Q03</title>
     <link rel="stylesheet" href="CSS/AP2_Q01.css">
 </head>
 <body>
     <header>
-    <h1>Vinicius Ferraz</h1>
+    <h1>Media do aluno</h1>
+    <div>
+        <p id= "nome"></p>
+    </div>
     </header>
-    <section>
-        <div>
-            <div>
-                <input type="text" value="" id="txtvalue" name="txtvalue" />
-                <button type="button" onclick="calcula(document.getElementById('txtvalue').value)">nota</button>
-                </div>
-                <p id="Nome do aluno"></p>
-                <p id="nota"></p>
-                <p id="Aprovado"></p>
-                <p id="reposta"></p>
-        </div>
-        <div id="res">
 
-        </div>
-    </section>
     <footer>
-        <script src="Script2.js"></script>
+        <script src="Script3.js"></script>
         <p>&copy; AP_2</p>
     </footer>
     
