--- a/AP2_Q02.html
+++ b/AP2_Q02.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <h1>Vinicius Ferraz</h1>
+    <h1>Jonathan Ferraz</h1>
     </header>
     <section>
         <div>
