--- a/AP2_Q03.html
+++ b/AP2_Q03.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP2-Questão-3</title>
+    <title>AP2_Q03</title>
     <link rel="stylesheet" href="CSS/AP2_Q01.css">
 </head>
 <body>
-    <script>
-        var a = Number(window.prompt('Digite um valor para A: '))
-        var b = Number(window.prompt( 'Digite um valor para B: '))
-        var res = a == b ? a + b:a*b
-
-        document.write(`A variável C é `,res)      
-
-    </script>
+    <script src="Script3.js"></script>
 </body>
 </html>
