--- a/AP2_Q04.html
+++ b/AP2_Q04.html
@@ -3,20 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP2-Questão-4</title>
-    <style>
-        body {
-            font: normal 20pt Arial;
-        }
-    </style>
+    <title>AP2_Q04</title>
+    <link rel="stylesheet" href="CSS/AP2_Q01.css">
+
 </head>
 <body>
-    <script>
-       var preço = Number(window.prompt('Digite o preço do produto: '))
-       var parc = Number(window.prompt('Esse valor pode ser em 3 ou 5 vezes, em quantas você quer fazer? '))
-       var total = parc ==3?preço * 10/100 + preço:preço *20/100 +preço
-       document.write(`O novo valor do produto com juros é `,total.toLocaleString('pt-BR',{style:'currency',currency:'BRL'}))
-
-    </script>
+<script src="Script4.js"></script>
 </body>
 </html>
