--- a/AP2_Q06.html
+++ b/AP2_Q06.html
@@ -3,28 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AP2-Questão-6</title>
-    <style>
-        body {
-            font: normal 20pt Arial;
-        }
-    </style>
+    <title>AP2_06</title>
+    <link rel="stylesheet" href="CSS/AP2_Q01.css">
+
 </head>
 <body>
-    <script>
-        var n1 = Number(window.prompt('Digite um número ').replace(',','.'))
-        var n2 = Number(window.prompt('Digite outro número ').replace(',','.'))
-        var x = (window.prompt( 'Digite 1 para soma, 2 para multiplicação ou 3 para divisão dos números digitados '))
-        if (x==1) {
-            document.write(`A soma dos números digitados é `, n1 + n2)
-        }
-        if (x==2) {
-            document.write(`A multiplicação dos números digitados é `, n1 * n2)
-         } else {
-             if (x==3) {
-                  document.write(`A divisão dos números digitados é `, n1 / n2)
-              }
-        }   
-       </script> 
+    <script src="Script6.js"></script>
+
     </body>
 </html>
