--- a/AP2_Q02.html
+++ b/AP2_Q02.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <header>
-    <h1>Jonathan Ferraz</h1>
     </header>
     <section>
         <div>
@@ -16,6 +15,7 @@
                 <input type="text" value="" id="txtvalue" name="txtvalue" />
                 <button type="button" onclick="calcula(document.getElementById('txtvalue').value)">Calcular</button>
                 </div>
+                <p id="nome"></p>
                 <p id="valor"></p>
                 <p id="porcetagem"></p>
                 <p id="calculo"></p>
